--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -29,6 +29,16 @@
   location = {{Massachusetts}}
 }
 
+@thesis{amin2016dependent,
+  title = {Dependent {{Object Types}}},
+  author = {Amin, Nada},
+  date = {2016},
+  institution = {{EPFL}},
+  doi = {10.5075/epfl-thesis-7156},
+  langid = {english},
+  type = {PhD Thesis}
+}
+
 @article{andrieu2010particlea,
   title = {Particle {{Markov}} Chain {{Monte Carlo}} Methods},
   shorttitle = {Particle {{Markov}} Chain {{Monte Carlo}} Methods},
@@ -1563,6 +1573,18 @@
   url = {https://openreview.net/forum?id=ryxuz9SzDB},
   urldate = {2019-11-05},
   eventtitle = {{{NeurIPS}}}
+}
+
+@inproceedings{wadler1989how,
+  title = {How to Make Ad-Hoc Polymorphism Less Ad Hoc},
+  booktitle = {Proceedings of the 16th {{ACM SIGPLAN}}-{{SIGACT}} Symposium on {{Principles}} of Programming Languages},
+  author = {Wadler, Philip and Blott, Stephen},
+  date = {1989},
+  pages = {60--76},
+  publisher = {{ACM}},
+  url = {http://dl.acm.org/citation.cfm?id=75283},
+  urldate = {2015-04-23},
+  keywords = {haskell,polymorphism,type class,type theory}
 }
 
 @article{wainwright2007graphical,
